adding support for multiple paths and cleaned up some of the plugin logic for cleaner syntax

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name":"mongoose-relationship",
-    "version":"0.0.1",
+    "version":"0.0.2",
     "description":"mongoose plugin to create maintain one-many and many-many bidirectional relationships between two schemas",
     "main":"index.js",
     "scripts": {
@@ -13,13 +13,13 @@
     "author": "Mike Sabatini <mike@parallelboxes.com>",
     "license":"MIT",
     "dependencies": {
-        "underscore":"1.5.x"
+        "underscore":"1.5.x",
+        "async":"0.2.x"
     },
     "devDependencies": {
         "mocha":"1.14.x",
         "should":"3.1.x",
-        "mongoose":"3.8.x",
-        "async":"0.2.x"
+        "mongoose":"3.8.x"
     },
     "repository": {
         "type": "git",
